--- a/css/styles.css
+++ b/css/styles.css
@@ -240,3 +240,65 @@ ol{
     letter-spacing: 0.02em;
     color: #F4F4FD;
  }
+
+ /**
+   |============================
+   | Portfoloi block
+   |============================
+ */
+
+.portfolio {}
+
+.portfolio-title {}
+
+.portfolio-list {}
+
+.portfolio-item {}
+
+.portfolio-btn-all {
+  background: #404BBF;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    font-weight: 500;
+      font-size: 16px;
+      line-height: 1.5;
+      display: flex;
+      align-items: center;
+      text-align: center;
+      letter-spacing: 0.04em;
+      color: #FFFFFF;
+}
+
+.portfolio-btn {
+  background: #F4F4FD;
+    border: 1px solid #E7E9FC;
+    border-radius: 4px;
+    font-weight: 500;
+      font-size: 16px;
+      line-height: 1.5;
+      display: flex;
+      align-items: center;
+      text-align: center;
+      letter-spacing: 0.04em;
+      color: #4D5AE5;
+}
+
+.portfolio-projects-list {}
+
+.portfolio-projects-item {}
+
+.portfolio-projects-caption {
+  font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+}
+
+.portfolio-projects-parph {
+  line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.portfolio-projects-link {}
