--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
+:root {
+      --brand-color: #2e2f42;
+    }
 body {
-  color: #2E2F42;
-font-family: Roboto, Raleway, sans-serif ;
+  background-color:#FFFFFF
+  color: #434455;
+font-family: Roboto, sans-serif ;
 }
  
 a {
@@ -30,24 +34,24 @@ ol{
 }
 
 .logo {
-  font-family: 'Raleway';
+  font-family: 'Raleway', sans-serif;
     font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #2E2F42;
+    color: #4d5ae5;
 }
 
-.logo-web {
+.logo-studio {
   font-family: 'Raleway';
     font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
-    color: #4D5AE5
+    color: #2e2f42;
 }
 
-.header-list {
+.list {
   font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
@@ -55,6 +59,7 @@ ol{
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2E2F42;
+    list-style: none
 }
 
 .header-item {}
@@ -109,14 +114,10 @@ ol{
 .hero-btn {
   font-weight: 500;
     font-size: 16px;
-    line-height: 24px;
-    display: flex;
-    align-items: center;
+    line-height: 1.5;
     letter-spacing: 0.04em;
     color: #FFFFFF;
   background: #4D5AE5;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
 }
 
 /**
@@ -227,15 +228,12 @@ ol{
     font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
-    align-items: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #F4F4FD;
  }
 
  .footer-text {
-  font-weight: 400;
-    font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #F4F4FD;
@@ -257,13 +255,9 @@ ol{
 
 .portfolio-btn-all {
   background: #404BBF;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
     font-weight: 500;
       font-size: 16px;
       line-height: 1.5;
-      display: flex;
-      align-items: center;
       text-align: center;
       letter-spacing: 0.04em;
       color: #FFFFFF;
@@ -272,12 +266,9 @@ ol{
 .portfolio-btn {
   background: #F4F4FD;
     border: 1px solid #E7E9FC;
-    border-radius: 4px;
     font-weight: 500;
       font-size: 16px;
       line-height: 1.5;
-      display: flex;
-      align-items: center;
       text-align: center;
       letter-spacing: 0.04em;
       color: #4D5AE5;
