--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,14 @@
 :root {
       --brand-color: #2e2f42;
     }
-.body {
+body {
   background-color:#FFFFFF
   color: #434455;
   font-family: Roboto, sans-serif ;
 }
  
 a {
-text-decoration: none;
+  text-decoration: none;
 }
 
 button {
@@ -41,6 +41,10 @@ ol{
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+}
+
+.link{
+
 }
 
 .logo-studio {
