--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 :root {
       --brand-color: #2e2f42;
     }
-body {
+.body {
   background-color:#FFFFFF
   color: #434455;
   font-family: Roboto, sans-serif ;
