--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ ol{
 }
 
 .logo{
-  font-family: 'Raleway';
+  font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 800;
     font-size: 18px;
@@ -36,7 +36,7 @@ ol{
 }
 
 .logo-studio{
-font-family: 'Raleway';
+font-family: 'Raleway', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
@@ -47,16 +47,20 @@ font-family: 'Raleway';
 }
 
 .header-item{
-  font-weight: 500
-  line-height: 1.5
-  letter-spacing: 0.02em
+  
 }
 
 .header-link{
+  font-weight: 500
+   line-height: 1.5
+    letter-spacing: 0.02em
 color: #2e2f42;
 }
 
-.header-item:hover,
+.header-item:hover {
+  color: #404bbf;
+}
+
 .header-item:focus {
-color: #404bbf;
+  color: #404bbf;
 }
