--- a/css/styles.css
+++ b/css/styles.css
@@ -51,16 +51,16 @@ font-family: 'Raleway', sans-serif;
 }
 
 .header-link{
-  font-weight: 500
-   line-height: 1.5
-    letter-spacing: 0.02em
-color: #2e2f42;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
-.header-item:hover {
+.header-link:hover {
   color: #404bbf;
 }
 
-.header-item:focus {
+.header-link:focus {
   color: #404bbf;
 }
