--- a/css/styles.css
+++ b/css/styles.css
@@ -83,3 +83,32 @@ color: #434455;
   color: #404bbf;
 }
 
+.hero{
+background-color: #2e2f42;
+}
+
+.peculiarities-title {
+font-size: 56px;
+line-height: 1.07;
+text-align: center;
+letter-spacing: 0.02em;
+color: #ffffff;
+}
+
+.hero-btn {
+  background-color: #4D5AE5;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+}
+
+.hero-btn:hover {
+background-color: #404BBF;
+}
+
+.hero-btn:focus {
+background-color: #404BBF;
+}
