--- a/css/styles.css
+++ b/css/styles.css
@@ -134,3 +134,35 @@ letter-spacing: 0.02em;
   text-transform: capitalize;
   color: #2e2f42;
 }
+
+.team{
+  background-color: #F4F4FD;
+}
+
+.team-title {
+font-size: 36px;
+line-height: 1.11;
+text-align: center;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+color: #2e2f42;
+}
+
+.team-item {
+background-color: #FFFFFF;
+}
+
+.team-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.team-parph {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+
