--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@ color: #2e2f42;
 background-color: #FFFFFF;
 }
 
-.team-title {
+.team-caption {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
