--- a/css/styles.css
+++ b/css/styles.css
@@ -215,7 +215,7 @@ background-color: #FFFFFF;
   color: #4d5ae5;
 }
 .link {
-  text-decoration: none
+  text-decoration: none;
 }
 
 .footer-logo-studio {
@@ -227,3 +227,31 @@ color: #f4f4fd;
     color: #F4F4FD;
     letter-spacing: 0.02em;
 }
+
+/**
+  |============================
+  | Portfolio
+  |============================
+*/
+
+.portfolio-btn {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #4d5ae5;
+  background-color: #F4F4FD;
+}
+
+.portfolio-btn:hover {
+ color: #FFFFFF;
+background-color: #404BBF
+}
+
+.portfolio-btn:focus {
+ color: #FFFFFF;
+background-color: #404BBF
+}
+
+
