--- a/css/styles.css
+++ b/css/styles.css
@@ -247,3 +247,18 @@ background-color: #404BBF
   text-decoration: none;
 }
 
+.projects-caption {
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2e2f42;
+}
+
+.projects-parph {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+
+}
