--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,17 @@
 :root {
-      --brand-color: #2e2f42;
-    }
+      --brand-color: #434455;
+      --brand-links-hf : #404bbf;
+      --text-color: #2E2F42;
+      --text-color-bg: #FFFFFF;
+      --logo-color: #4D5AE5;
+      --complementary-color: #F4F4FD;
+      }
+    
 body {
   font-family: Roboto, sans-serif ;
+  color: var(--brand-color);
+    background-color: var(--text-color-bg);
 }
-
-.page{
-  color: #434455;
-  background-color: #FFFFFF;
-}
-
 
 button {
   cursor: pointer
@@ -28,13 +30,12 @@ ol{
 
 .logo{
   font-family: 'Raleway', sans-serif;
-    font-style: normal;
     font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #4D5AE5;
+    color: var(--logo-color);
 }
 
 .link {
@@ -42,7 +43,7 @@ ol{
 }
 
 .logo-studio{
-  color: #2E2F42;
+  color: var(--text-color);
 }
 
 .header-item{
@@ -53,15 +54,14 @@ ol{
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--text-color);
 }
 
 .header-link:hover {
-  color: #404bbf;
+  color: var(--brand-links-hf);
 }
-
 .header-link:focus {
-  color: #404bbf;
+  color: var(--brand-links-hf);
 }
 
 .header-address {
@@ -71,15 +71,15 @@ ol{
 .address-link {
 line-height: 1.5;
 letter-spacing: 0.02em;
-color: #434455;
+color: var(--brand-color);
 }
 
 .address-link:hover {
- color: #404bbf;
+  color: var(--brand-links-hf);
+  }
 }
-
 .address-link:focus {
-  color: #404bbf;
+ color: var(--brand-links-hf);
 }
 
 /**
@@ -89,7 +89,7 @@ color: #434455;
 */
 
 .hero{
-background-color: #2e2f42;
+background-color: var(--text-color);
 }
 
 .hero-title {
@@ -97,25 +97,24 @@ font-size: 56px;
 line-height: 1.07;
 text-align: center;
 letter-spacing: 0.02em;
-color: #ffffff;
+color: var(--text-color-bg);
 }
 
 .hero-btn {
-  background-color: #4D5AE5;
+  background-color: var(--logo-color);
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  color: #ffffff;
+  color: var(--text-color-bg);
 }
 
 .hero-btn:hover {
-background-color: #404BBF;
+  background-color: var(--brand-links-hf);
 }
-
 .hero-btn:focus {
-background-color: #404BBF;
+background-color: var(--brand-links-hf);
 }
 
 /**
@@ -129,7 +128,7 @@ background-color: #404BBF;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--text-color);
 }
 
 .peculiarities-parph {
@@ -149,7 +148,7 @@ letter-spacing: 0.02em;
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  color: #2e2f42;
+  color: var(--text-color);
 }
 
 /**
@@ -159,7 +158,7 @@ letter-spacing: 0.02em;
 */
 
 .team{
-  background-color: #F4F4FD;
+  background-color: var(--complementary-color);
 }
 
 .team-title {
@@ -168,11 +167,11 @@ line-height: 1.11;
 text-align: center;
 letter-spacing: 0.02em;
 text-transform: capitalize;
-color: #2e2f42;
+color: var(--text-color);
 }
 
 .team-item {
-background-color: #FFFFFF;
+background-color: var(--text-color-bg);
 }
 
 .team-caption {
@@ -180,7 +179,7 @@ background-color: #FFFFFF;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--text-color);
 }
 
 .team-parph {
@@ -195,7 +194,7 @@ background-color: #FFFFFF;
 */
 
 .footer {
-  background-color: #2e2f42;
+  background-color: var(--text-color);
 }
 
 .footer-logo {
@@ -205,19 +204,14 @@ background-color: #FFFFFF;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #4d5ae5;
+  color: var(--logo-color);
 }
-.link {
-  text-decoration: none;
-}
-
 .footer-logo-studio {
-color: #f4f4fd;
-}
+color: var(--complementary-color);}
 
 .footer-parph {
   line-height: 1.5;
-    color: #F4F4FD;
+    color: var(--complementary-color);
     letter-spacing: 0.02em;
 }
 
@@ -233,18 +227,17 @@ color: #f4f4fd;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  color: #4d5ae5;
-  background-color: #F4F4FD;
+  color: var(--logo-color);
+  background-color: var(--complementary-color);
 }
 
-.portfolio-btn:hover,
+.portfolio-btn:hover {
+  color: var(--text-color-bg);
+    background-color: var(--brand-links-hf)
+}
 .portfolio-btn:focus {
- color: #FFFFFF;
-background-color: #404BBF
-}
-
-.link {
-  text-decoration: none;
+ color: var(--text-color-bg);
+background-color: var(--brand-links-hf)
 }
 
 .projects-caption {
@@ -252,13 +245,13 @@ font-weight: 500;
 font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
-color: #2e2f42;
+color: var(--text-color);
 }
 
 .projects-parph {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--brand-color);
 
 }
